--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -108,3 +108,7 @@ add_test(test_fingerprint ${TEST_PATH}/test_fingerprint)
 add_executable(test_device_consistency test_device_consistency.c ${common_SRCS})
 target_link_libraries(test_device_consistency ${LIBS})
 add_test(test_device_consistency ${TEST_PATH}/test_device_consistency)
+
+add_executable(test_benchmarks test_benchmarks.c ${common_SRCS})
+target_link_libraries(test_benchmarks ${LIBS})
+add_test(test_benchmarks ${TEST_PATH}/test_benchmarks)
